2017-07-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/file.c,
    gplink/gplink.c,
    gplink/lst.c,
    gputils/gpvc.c:
    Applied patch: "#71 Eliminate PATH_MAX"
    Thanks to Philipp Klaus Krause.

2017-07-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcoffgen.c,
    libgputils/gpcoffgen.h,
    libgputils/gpwriteobj.c,
    libgputils/gpwriteobj.h:
    Fixed bug: "#303 Bad chars in COFF file"

    gpasm/directive.c,
    gpasm/gpasm.c,
    gpasm/processor.c,
    libgputils/gpprocessor.c,
    libgputils/gpprocessor.h:
    Added the CPU_NO_OPTION_INSN flag.

2017-05-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx,
    configure, configure.ac,
    libgputils/gpprocessor.c, libgputils/gpreg-table.c,
    header/*.inc, lkr/*.lkr:
    Updated with new devices based on the mplabx-3.61.
    Changed version from 1.5.1 to 1.5.2.

2017-05-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac, libgputils/gpcfg-table.c,
    header/*.inc, lkr/*.lkr:
    Updated based on the mplabx-3.61.

2017-05-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcod.c:
    Bugfix: Removed the unnecessary "\n" character.

2017-05-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gplist.c:
    Changed the print format: "%zu" --> "%"SIZE_FMTu

  * libgputils/gpcod.c:
    Eliminating the problem of older glibc: The strftime function not
    know the "%g" format.

  * gpasm/evaluate.c,
    gputils/block.c,
    gputils/block.h,
    gputils/dump.c,
    libgputils/gpcoffopt.c,
    libgputils/gpreadhex.c,
    libgputils/gpsystem.c:
    Eliminated some compiler warning.

2017-05-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpmsg.c,
    gputils/gpvo.c:
    Changed the print format: "%zu" --> "%"SIZE_FMTu
    Bugfix: "#303 Bad chars in COFF file"
    Thanks to Patrick Hayes for the report.
