@@ -1,3 +1,12 @@
+2017-07-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gputils/gpstrip.c,
+    libgputils/gpcoffgen.c,
+    libgputils/gpcoffgen.h,
+    libgputils/gpcofflink.c,
+    libgputils/gpreadobj.c,
+    libgputils/gpwriteobj.c:
+    Final bugfix: "#303 Bad chars in COFF file"
+
 2017-07-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/file.c,
     gplink/gplink.c,
